# task-organizer-api

./: .gitignore  README.md  heroku.yml  pyproject.toml  requirements.md  requirements.txt
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
task_organizer/: .env.sample  asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
tasks/: models.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
