[tool.poetry]
name = "task-organizer-api"
version = "0.1.0"
description = ""
authors = ["Moha-AlHanbali <moha.alhanbali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.0.0"
django-cors-headers = "^3.11.0"
django-environ = "^0.8.1"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
docker = "^5.0.3"
docker-compose = "^1.29.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
